fix: 🐛 adjust spacings

--- a/beratungCustom/css/_prejoin.css
+++ b/beratungCustom/css/_prejoin.css
@@ -97,7 +97,7 @@
 }
 
 .premeeting-screen .media-btn-container {
-	margin-bottom: 64px;
+	margin-bottom: 56px;
 }
 
 .premeeting-screen-avatar.avatar[style] {
